# text2tabletop

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: main.yaml
src/: lib.rs
src/army_list/: army.rs  definitions.rs  mod.rs  regex_helpers.rs  spells.rs  weapons.rs
static/: _non-printed.scss  _notes.scss  _rules.scss  _spells.scss  _units.scss  example-army.txt  example-notes.txt  example-rules.txt  example-spells.txt  index.css  index.scss
templates/: army-list.html
