[package]
version = "0.1.0"
name = "text2tabletop"
repository = "https://github.com/erkannt/text2tabletop"
authors = ["Daniel Haarhoff <daniel@rknt.de>"]
license = "Public Domain"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
askama = "0.12.0"
regex = "1.8.1"
seed = "0.8.0"
serde = "1.0.160"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-4z']
